--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -1,25 +1,17 @@
-// Quasar SCSS (& Sass) Variables
-// --------------------------------------------------
-// To customize the look and feel of this app, you can override
-// the Sass/SCSS variables found in Quasar's source Sass/SCSS files.
-
 // Check documentation for full list of Quasar variables
+// https://quasar.dev/style/sass-scss-variables#variables-list
 
-// Your own variables (that are declared here) and Quasar's own
-// ones will be available out of the box in your .vue/.scss/.sass files
+$primary: #4a4e69;
+$secondary: #9a8c98;
+$accent: #c9ada7;
 
-// It's highly recommended to change the default colors
-// to match your app's branding.
-// Tip: Use the "Theme Builder" on Quasar's documentation website.
+$dark: #22223b;
+$dark-page: #4a4e69;
 
-$primary: #1976d2;
-$secondary: #26a69a;
-$accent: #9c27b0;
+$positive: #10aa83;
+$negative: #e75e51;
+$info: #6c64fc;
+$warning: #f4d261;
 
-$dark: #1d1d1d;
-$dark-page: #121212;
-
-$positive: #21ba45;
-$negative: #c10015;
-$info: #31ccec;
-$warning: #f2c037;
+$light: #f2e9e4;
+$text-light: #f2e9e4 !important;
